--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
 	font-family: 'Roboto', sans-serif;
 }
 
-body{
+html, body{
 	background: #272833;
+	cursor: default;
 }
 
 .container{
@@ -36,6 +37,7 @@ header{
 
 .header-language-link{
 	text-decoration: none;
+	cursor: default;
 }
 
 .header-language-link:first-child{
@@ -126,7 +128,6 @@ margin-bottom: 25px;
 	line-height: 175.78%;
 	color: #272833;
 	margin-bottom: 130px;
-	cursor: pointer;
 }
 
 .question, .mail-question{
@@ -162,6 +163,7 @@ color: #6B6C7E;
 	border-radius: 4px;
 	text-align: center;
 	margin-bottom: 15px;
+	width: 100%;
 }
 
 .arrow{
@@ -198,9 +200,6 @@ color: #6B6C7E;
 	margin-right: 20px;
 }
 
-.thief-container{
-	display: flex;
-}
 
 
 
@@ -221,7 +220,7 @@ color: #6B6C7E;
 }
 
 .work-container{
-	margin-right: 40px;
+	padding-right: 40px;
 }
 
 }
@@ -279,6 +278,7 @@ color: #6B6C7E;
 		margin-top: 60px;
 		padding-left: 0;
 		width: calc(100vw - 80px);
+		padding-right: 0;
 		margin-right: auto;
 		margin-left: auto;
 	}
@@ -286,6 +286,12 @@ color: #6B6C7E;
 	.work-title{
 		font-size: 19px;
 		margin-bottom: 22px;
+	}
+
+	.step-two-row-item{
+		display: flex;
+		align-items: center;
+		justify-content: center;
 	}
 
 	.step-one, .step-two-row-item, .step-three-row-item{
