--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 html, body{
 	background: #272833;
 	cursor: default;
+	overflow-x: hidden;
 }
 
 .container{
@@ -163,7 +164,6 @@ color: #6B6C7E;
 	border-radius: 4px;
 	text-align: center;
 	margin-bottom: 15px;
-	width: 100%;
 }
 
 .arrow{
@@ -207,6 +207,12 @@ color: #6B6C7E;
 	display: none;
 }
 
+.thief{
+	max-width: 1200px;
+	width: 100%;
+	height: auto;
+}
+
 @media(max-width: 1200px){
 	.container{
 		max-width: 100%;
@@ -220,7 +226,7 @@ color: #6B6C7E;
 }
 
 .work-container{
-	padding-right: 40px;
+	margin-right: 40px;
 }
 
 }
@@ -278,7 +284,7 @@ color: #6B6C7E;
 		margin-top: 60px;
 		padding-left: 0;
 		width: calc(100vw - 80px);
-		padding-right: 0;
+		margin-right: 0;
 		margin-right: auto;
 		margin-left: auto;
 	}
