--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header{
 
 .header-language-link{
 	text-decoration: none;
-	cursor: default;
+	cursor: pointer;
 }
 
 .header-language-link:first-child{
@@ -128,6 +128,7 @@ margin-bottom: 25px;
 	font-size: 16px;
 	line-height: 175.78%;
 	color: #272833;
+	cursor: pointer;
 	margin-bottom: 130px;
 }
 
